--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@
       <p>GrimmDraw was born from a passion to challenge the conventional. Our roots lie in a deep respect for the ritual and culture of smoking, balanced with a vision for innovation.</p>
       <p>What began as boutique handcrafted blends evolved into a global lifestyle brand serving discerning users worldwide.</p>
       <div class="media-wrapper">
-        <img src="our_story_image.jpg" alt="Historical photo of GrimmDraw founders" />
+        <img src="jabu.JPG" alt="Historical photo of GrimmDraw founder" />
       </div>
     </section>
 
