--- a/about.html
+++ b/about.html
@@ -283,7 +283,7 @@
       <p>We promote mindful indulgence and offer smokeless options for those seeking cleaner alternatives.</p>
 
       <div class="media-wrapper">
-        <img src="health_quality.jpg" alt="Quality assurance and clean vaping" />
+        <img src="reliable.png" alt="Quality assurance and clean vaping" />
       </div>
     </section>
   </div>
