--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -214,7 +214,7 @@
 
     footer {
       background: rgba(0, 0, 0, 0.8);
-      padding: 10px;
+      padding: 10px 10px 20px 10px;
       font-size: 14px;
       text-align: center;
       width: 100%;
@@ -228,14 +228,13 @@
     }
 
     .social-links a {
-      margin: 0 5px;
+      margin: 0 6px;
       display: inline-block;
     }
 
     .social-links img {
       width: 24px;
       height: 24px;
-      vertical-align: middle;
     }
 
     @media (max-width: 768px) {
@@ -256,7 +255,6 @@
       }
     }
 
-    /* Age verification modal */
     #ageVerificationModal {
       position: fixed;
       top: 0;
@@ -343,22 +341,22 @@
   <footer>
     <p>&copy; 2025 GrimmDraw | All Rights Reserved</p>
     <div class="social-links">
-      <a href="https://www.instagram.com/yourusername" target="_blank">
+      <a href="https://www.instagram.com/accounts/login/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/2111/2111463.png" alt="Instagram" />
       </a>
-      <a href="https://twitter.com/yourusername" target="_blank">
+      <a href="https://twitter.com/login" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/3670/3670151.png" alt="Twitter" />
       </a>
-      <a href="https://www.snapchat.com/add/yourusername" target="_blank">
+      <a href="https://accounts.snapchat.com/accounts/login" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/3670/3670053.png" alt="Snapchat" />
       </a>
-      <a href="https://www.tiktok.com/@yourusername" target="_blank">
+      <a href="https://www.tiktok.com/login" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/3046/3046121.png" alt="TikTok" />
       </a>
-      <a href="https://www.youtube.com/@yourusername" target="_blank">
+      <a href="https://accounts.google.com/ServiceLogin?service=youtube" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/3670/3670147.png" alt="YouTube" />
       </a>
-      <a href="https://www.facebook.com/yourusername" target="_blank">
+      <a href="https://www.facebook.com/login" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/145/145802.png" alt="Facebook" />
       </a>
     </div>
@@ -417,5 +415,6 @@
       }
     });
   </script>
+
 </body>
 </html>
